# SPH-EXA

./: .gitignore  .gitmodules  CMakeLists.txt  constants.txt
main/: CMakeLists.txt
main/src/: CMakeLists.txt
main/src/observables/: factory.hpp
main/src/sphexa/: CMakeLists.txt  simulation_data.hpp  sphexa.cpp
sph/include/sph/: update_h.hpp
visualization/: .gitignore  CMakeLists.txt  README.md
visualization/cmake/: compile_shader.cmake  generate_shader_header.cmake
visualization/shader/: CMakeLists.txt
visualization/shader/glsl/: allVertexCompute.comp  element_compute.comp  fillCellVertexInfo.comp  physicsCompute.comp  resetCellVertexInfo.comp  shader.frag  shader.vert  sphereVertexCompute.comp  vertex_compute.comp
visualization/shader/include/: constants.h  structures.h
visualization/src/: CMakeLists.txt  camera.cpp  camera.h  core.cpp  elements.cpp  elements.h  elements_generator.cpp  elements_generator.hpp  manager.h  math.h  points_generator.cpp  points_generator.hpp  renderer.hpp  scene.hpp  test.cpp  vulkan_instance.bak_cpp  vulkan_instance.cpp  vulkan_instance.h  vulkan_utils.cpp  vulkan_utils.h  window.cpp  window.h
visualization/src/meta/: singleton.h
